# scraping-utils

./: .gitignore  README.md  pyproject.toml  setup.py
scraping_utils/: __init__.py  base_scraper.py  core.py  core_utils.py  credentials_extractor.py  mitm_proxy.py  mongodb.py  mongodb_client.py  request_interceptor.py
