[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraping-utils"
version = "0.4.1"
description = "Utilities for web scraping"
requires-python = ">=3.11"
dependencies = [
    "lxml",
    "curl_cffi",
    "pymongo",
    "mitmproxy",
    "python-dotenv",
    "prefect",
    "pyautogui",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["scraping_utils"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true